remove debugging variable